<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.hqwu.commons</groupId>
  <artifactId>hq-commons-parent</artifactId>
  <version>1.17.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <spring-boot.version>3.5.9</spring-boot.version>
    <commons-io.version>2.15.1</commons-io.version>
    <commons-text.version>1.11.0</commons-text.version>
    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
    <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
    <mybatis-plus.version>3.5.11</mybatis-plus.version>
<!--    <dubbo.version>2.7.12</dubbo.version>-->
    <jsqlparser.version>4.9</jsqlparser.version>
    <jacoco.version>0.8.12</jacoco.version>
    <lombok.version>1.18.42</lombok.version>
    <oceanbase-client.version>2.4.16</oceanbase-client.version>

    <test.logger.level>WARN</test.logger.level>
  </properties>

  <scm>
    <developerConnection>scm:git:https://github.com/taige/hq-commons.git</developerConnection>
    <url>https://github.com/taige/hq-commons</url>
    <tag>HEAD</tag>
  </scm>

  <modules>
    <module>hq-utils</module>
    <module>hq-cp</module>
    <module>hq-cp-boot-starter</module>
    <module>hq-mybatis-plus-extension</module>
    <module>hq-spring-webmvc</module>
    <module>report-aggregate</module>
    <module>hq-utils-spring</module>
    <!--    <module>hq-dubbo-ext</module>-->
  </modules>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>Github Packages</name>
      <url>https://maven.pkg.github.com/taige/hq-commons</url>
    </repository>
    <snapshotRepository>
      <id>github</id>
      <name>Github Packages</name>
      <url>https://maven.pkg.github.com/taige/hq-commons</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus</artifactId>
        <version>${mybatis-plus.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.jsqlparser</groupId>
        <artifactId>jsqlparser</artifactId>
        <version>${jsqlparser.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>com.oceanbase</groupId>
        <artifactId>oceanbase-client</artifactId>
        <version>${oceanbase-client.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <!-- JaCoCo 代码覆盖率插件 -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <configuration>
          <!-- 排除某些类或包 -->
          <excludes>
            <exclude>**/entity/**</exclude>
            <exclude>**/dto/**</exclude>
            <exclude>**/enums/**</exclude>
            <exclude>**/config/**</exclude>
            <exclude>**/*Exception.class</exclude>
            <exclude>**/*Application.class</exclude>
          </excludes>
        </configuration>
        <executions>
          <!-- 在测试前准备 JaCoCo Agent -->
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <!-- 检查覆盖率是否达到最低标准（可选） -->
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
<!--              <haltOnFailure>false</haltOnFailure> &lt;!&ndash; 不中断测试，仅报告覆盖率问题 &ndash;&gt;-->
              <rules>
                <rule>
                  <!-- 整体覆盖率要求: 80% 是行业分水岭, 新项目 90% -->
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <!-- INSTRUCTION 比 LINE 稍微精确一点点 -->
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.90</minimum>  <!-- 基础组件保持 90% -->
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.85</minimum>  <!-- 分支覆盖率 85% -->
                    </limit>
                  </limits>
                </rule>
                <!-- 包级别:确保每个模块达标 -->
                <rule>
                  <element>PACKAGE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.85</minimum> <!-- 包级别 85% -->
                    </limit>
                  </limits>
                </rule>
                <!-- 类级别:控制复杂度 -->
                <rule>
                  <element>CLASS</element>
                  <limits>
                    <!-- 圈复杂度 (Complexity) 代表代码的逻辑路径数量 -->
                    <limit>
                      <counter>COMPLEXITY</counter>
                      <value>MISSEDCOUNT</value>
                      <maximum>20</maximum> <!-- 建议降至 15,鼓励简化代码；基础组件严格限制为 10 -->
                    </limit>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.80</minimum> <!-- 0.50 ~ 0.80 -->
                    </limit>
                  </limits>
                </rule>
<!--                &lt;!&ndash; 方法级别:强制简单化 &ndash;&gt;-->
<!--                <rule>-->
<!--                  <element>METHOD</element>-->
<!--                  <limits>-->
<!--                    <limit>-->
<!--                      <counter>COMPLEXITY</counter>-->
<!--                      <value>TOTALCOUNT</value>-->
<!--                      <maximum>8</maximum> &lt;!&ndash; 单方法圈复杂度 ≤ 8 &ndash;&gt;-->
<!--                    </limit>-->
<!--                    <limit>-->
<!--                      <counter>LINE</counter>-->
<!--                      <value>COVEREDRATIO</value>-->
<!--                      <minimum>0.75</minimum> &lt;!&ndash; 方法覆盖率 75% &ndash;&gt;-->
<!--                    </limit>-->
<!--                  </limits>-->
<!--                </rule>-->
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <excludes>
            <!-- 排除集成测试类 -->
            <exclude>**/*IntTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <release>17</release>
          <parameters>true</parameters>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven-release-plugin.version}</version>
        <configuration>
          <arguments>-Dmaven.javadoc.skip=true -DskipTests</arguments>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>